// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/gradle/plugin/nodes should create nodes based on gradle 1`] = `
[
  [
    "proj/build.gradle",
    {
      "externalNodes": {},
      "projects": {
        "proj": {
          "metadata": {
            "targetGroups": {
              "help": [
                "buildEnvironment",
              ],
            },
            "technologies": [
              "gradle",
            ],
          },
          "name": "gradle-tutorial",
          "root": "proj",
          "targets": {
            "buildEnvironment": {
              "cache": true,
              "command": "./gradlew :buildEnvironment",
              "metadata": {
                "description": "Displays all buildscript dependencies declared in root project 'gradle-tutorial'.",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/gradle/plugin/nodes should create nodes based on gradle for nested project root 1`] = `
[
  [
    "nested/nested/proj/build.gradle",
    {
      "externalNodes": {},
      "projects": {
        "nested/nested/proj": {
          "metadata": {
            "targetGroups": {
              "help": [
                "buildEnvironment",
              ],
            },
            "technologies": [
              "gradle",
            ],
          },
          "name": "my-composite",
          "root": "nested/nested/proj",
          "targets": {
            "buildEnvironment": {
              "cache": true,
              "command": "./gradlew :buildEnvironment",
              "metadata": {
                "description": "Displays all buildscript dependencies declared in root project 'my-composite'.",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/gradle/plugin/nodes should create nodes with atomized tests targets based on gradle if ciTargetName is specified 1`] = `
[
  [
    "proj/application/build.gradle",
    {
      "externalNodes": {},
      "projects": {
        "proj/application": {
          "metadata": {
            "targetGroups": {
              "verification": [
                "test-ci",
              ],
            },
            "technologies": [
              "gradle",
            ],
          },
          "name": "application",
          "root": "proj/application",
          "targets": {
            "test-ci": {
              "cache": true,
              "dependsOn": [
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest10",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest7",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest6",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest3",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest2",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest9",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest5",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest4",
                },
                {
                  "params": "forward",
                  "projects": "self",
                  "target": "test-ci--DemoApplicationTest8",
                },
              ],
              "executor": "nx:noop",
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest10.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest7.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest6.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest3.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest2.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest9.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest5.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest4.java",
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest8.java",
              ],
              "metadata": {
                "description": "Runs Gradle Tests in CI",
                "nonAtomizedTarget": "test",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest10": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest10",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest10.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest10.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest2": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest2",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest2.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest2.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest3": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest3",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest3.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest3.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest4": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest4",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest4.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest4.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest5": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest5",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest5.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest5.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest6": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest6",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest6.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest6.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest7": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest7",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest7.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest7.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest8": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest8",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest8.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest8.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
            "test-ci--DemoApplicationTest9": {
              "cache": true,
              "command": "./gradlew :application:test --tests DemoApplicationTest9",
              "dependsOn": [
                "application:classes",
                "application:compileJava",
                "library:jar",
              ],
              "inputs": [
                "{projectRoot}/src/test/java/com/example/multimodule/application/DemoApplicationTest9.java",
              ],
              "metadata": {
                "description": "Runs Gradle test proj/application/src/test/java/com/example/multimodule/application/DemoApplicationTest9.java in CI",
                "technologies": [
                  "gradle",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/build/classes/java/test",
                "{projectRoot}/build/generated/sources/annotationProcessor/java/test",
                "{projectRoot}/build/generated/sources/headers/java/test",
                "{projectRoot}/build/tmp/compileTestJava/previous-compilation-data.bin",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/gradle/plugin/nodes should not create nodes with atomized tests targets based on gradle if ciTargetName is not specified 1`] = `
[
  [
    "proj/application/build.gradle",
    {
      "externalNodes": {},
      "projects": {
        "proj/application": {
          "metadata": {
            "targetGroups": {
              "verification": [
                "ci",
              ],
            },
            "technologies": [
              "gradle",
            ],
          },
          "name": "application",
          "root": "proj/application",
          "targets": {},
        },
      },
    },
  ],
]
`;
